--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ a {
 .content {
   flex: 1 0 auto;
   width: 960px;
-  margin:0 auto;
+  margin: 90px auto 0 auto;
 }
 
 header {
@@ -32,6 +32,11 @@ header {
   margin-bottom: 20px;
   border-bottom: 2px solid #cccccc;
   width: 100%;
+  position: fixed;
+  top: 0px;
+  z-index: 1;
+  height: 70px;
+
 }
 
 p {
@@ -42,7 +47,7 @@ h1 {
   font-family: Georgia, Times, "Times New Roman", serif;
   color: #ffffff;
   margin: 20px 0;
-  font-size: 2.0em;
+  font-size: 1.75em;
   font-weight: bold;
 }
 
@@ -133,13 +138,13 @@ textarea {
   float: left;
   background: #4aaaa5;
   padding: 0 20px;
-  width: 300px;
+  width: 280px;
 }
 
 #links {
   float: left;
   text-align: right;
-  width: 660px;
+  width: 680px;
   padding: 28px 0;
   color: #a4a2a1;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
