--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,50 @@
   box-sizing: border-box;
 }
 
+/* Setting fonts for certain selectors */
+header, h1, h2, h3, .absolute {
+  font-family: Georgia, Times, "Times New Roman", serif;
+}
+
+body, #links {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
 html, body {
-  height: 100%;
+  height: 100%; /* for sticky footer */
 }
 
 body {
   color: #777777;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   background-image: url("../images/intersection.png");
-  display: flex;
-  flex-direction: column;
+  display: flex; /* for sticky footer */
+  flex-direction: column; /* for sticky footer */
+}
+
+h1 {
+  color: #ffffff;
+  margin: 20px 0;
+  font-size: 1.75em;
+  font-weight: bold;
+}
+
+h2 {
+  color: #4aaaa5;
+  margin: 10px 0 20px 0;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+h3 {
+  color: #4aaaa5;
+  margin: 10px 0 20px 0;
+  font-size: 1.25em;
+  font-weight: bold;
+}
+
+p {
+  line-height: 25px;
+  margin-bottom: 1em;
 }
 
 a {
@@ -19,14 +53,7 @@ a {
   color: #a4a2a1;
 }
 
-.content {
-  flex: 1 0 auto;
-  width: 960px;
-  margin: 90px auto 0 auto;
-}
-
 header {
-  font-family: Georgia, Times, "Times New Roman", serif;
   color: #4aaaa5;
   background: #ffffff;
   margin-bottom: 20px;
@@ -36,103 +63,30 @@ header {
   top: 0px;
   z-index: 1;
   height: 70px;
-
 }
 
-p {
-  line-height: 25px
-}
-
-h1 {
-  font-family: Georgia, Times, "Times New Roman", serif;
-  color: #ffffff;
-  margin: 20px 0;
-  font-size: 1.75em;
-  font-weight: bold;
-}
-
-h2 {
-  font-family: Georgia, Times, "Times New Roman", serif;
-  color: #4aaaa5;
-  margin: 10px 0 20px 0;
-  font-size: 1.5em;
-  font-weight: bold;
-}
-
-h3 {
-  font-family: Georgia, Times, "Times New Roman", serif;
-  color: #4aaaa5;
-  margin: 10px 0 20px 0;
-  font-size: 1.25em;
-  font-weight: bold;
+input, textarea {
+  width: 100%;
+  margin: 8px 0;
+  border: 1px solid #dcdcdc;
+  color: #a4a2a1;
+  outline: none;
 }
 
 input {
-    width: 100%;
-    padding: 6px 10px;
-    margin: 8px 0;
-    border: 1px solid #dcdcdc;
-    color: #a4a2a1;
-    box-sizing: border-box;
-    outline: none;
+  padding: 6px 10px;
 }
 
 textarea {
-    width: 100%;
-    height: 150px;
-    padding: 10px;
-    margin: 8px 0;
-    border: 1px solid #dcdcdc;
-    color: #a4a2a1;
-    box-sizing: border-box;
-    outline: none;
-}
-
-.footer {
-  border-top: 6px solid #4aaaa5;
-  text-align: center;
-  background: #666666;
-  margin-top: 20px;
-  padding: 20px;
-  color: #dcdcdc;
-  font-size: 10px;
-}
-
-#bio-image {
-  width: 336px;
-  height: 432px;
-  margin-right: 20px;
-  float: left;
-}
-
-#github {
-  width: 64px;
-  height: 64px;
-  float: left;
-  margin-right: 10px
-}
-
-#linkedin {
-  width: 64px;
-  height: 64px;
-  float: left;
-  margin-right: 10px;
-}
-
-#submit {
-  background-color: #4aaaa5;
-  border: none;
-  color: #ffffff;
-  width: 100px;
-  font-size: 16px;
+  height: 150px;
   padding: 10px;
 }
 
-#stackoverflow {
-  width: 64px;
-  height: 64px;
-  float: left;
+#header-content {
+  width: 960px; 
+  margin:0 auto;  
 }
+
 
 #name {
   float: left;
@@ -147,7 +101,12 @@ textarea {
   width: 680px;
   padding: 28px 0;
   color: #a4a2a1;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+#content {
+  flex: 1 0 auto; /* for sticky footer */
+  width: 960px;
+  margin: 90px auto 0 auto;
 }
 
 #main {
@@ -161,26 +120,6 @@ textarea {
   margin-right: 40px;
 }
 
-#relative {
-  position: relative;
-  width: 280px;
-  height: 200px;
-  padding: 0;
-  margin-bottom: 40px;
-}
-
-#absolute {
-  position: absolute;
-  bottom: 20px;
-  width: 100%;
-  text-align: center;
-  font-family: Georgia, Times, "Times New Roman", serif;
-  color: #ffffff;
-  font-size: 1.25em;
-  background: #4aaaa5;
-  padding: 15px 0;
-}
-
 #sidebar {
   float: left;
   width: 270px;
@@ -191,8 +130,80 @@ textarea {
   border-color: #cccccc;
 }
 
-.clearfix::after {
-  content: "";
-  display: block;
-  clear: both;
+#footer {
+  border-top: 6px solid #4aaaa5;
+  text-align: center;
+  background: #666666;
+  margin-top: 20px;
+  padding: 20px;
+  color: #dcdcdc;
+  font-size: 10px;
+}
+
+#bio-image {
+  width: 336px;
+  height: 432px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  float: left;
+}
+
+.connect-image {
+  width: 64px;
+  height: 64px;
+  float: left;
+  margin-right: 10px
+}
+
+#submit {
+  background-color: #4aaaa5;
+  border: none;
+  color: #ffffff;
+  width: 100px;
+  font-size: 16px;
+  padding: 10px;
+}
+
+#relative {
+  position: relative;
+  width: 280px;
+  height: 200px;
+  padding: 0;
+  margin-bottom: 40px;
+}
+
+.absolute {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  text-align: center;
+  color: #ffffff;
+  font-size: 1.25em;
+  background: #4aaaa5;
+  padding: 15px 0;
+}
+
+#thick-line {
+  width: 100%; 
+  height: 3px; 
+  background: #dcdcdc; 
+  overflow: hidden; 
+  margin-bottom: 25px;
+}
+
+#thin-line {
+  width: 100%; 
+  height: 2px; 
+  background: #ededee; 
+  overflow: hidden; 
+  margin-bottom: 20px;
+}
+
+.portfolio-left-image {
+  float: left; 
+  margin-right: 48px; 
+}
+
+.portfolio-right-image {
+  float: left; 
 }
